--- a/iCarServices/index.html
+++ b/iCarServices/index.html
@@ -31,7 +31,7 @@
           <ul id="nav-menu-container">
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="Pricing.html">Pricing</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -190,7 +190,7 @@
   
     <footer>
       <div class="flex">
-        <small>&copy; 2020 iCarServices. All rights reserved</small>
+        <small>&copy; 2021 iCarServices. All rights reserved</small>
         <ul>
           <li>
             <a href="#">
