--- a/iCarServices/services.html
+++ b/iCarServices/services.html
@@ -34,7 +34,7 @@
               <ul id="nav-menu-container">
                 <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="Pricing.html">Pricing</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="contact.html">Contact</a></li>
               </ul>
